# redshift-to-snowflake-migration-utils

./: .env.example  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
diff_checker/: diff_checker_base.py  sql_diff_checker.py  table_view_diff_checker.py  tables_views.csv
diff_checker/sql/: sql_param.json
i18n/: README.ja.md
redshift_ddl_getter/: redshift_table_ddl_getter.py  redshift_view_ddl_getter.py  table_list.txt  view_list.txt
snowflake_function/: array_flatten.sql  f_list_distinct_val_string_delimiter_string.sql
snowflake_make_parquet_insert/: procedure.public.MAKE_PARQUET_INSERT.sql
sql_converter/: sql_converter.py
